sdk_tests/tests/pbc_contract_codegen/fail/zk/secret_binary_derive_unsupported_enum_c_style.rs
use pbc_zk::SecretBinary;

pub fn main() {}

#[derive(SecretBinary)]
enum SecretEnum {
    A, B, C
}
