sdk_tests/tests/pbc_contract_codegen/fail/zk/secret_binary_derive_unsupported_enum_c_style.stderr
error: proc-macro derive panicked
 --> tests/pbc_contract_codegen/fail/zk/secret_binary_derive_unsupported_enum_c_style.rs:5:10
  |
5 | #[derive(SecretBinary)]
  |          ^^^^^^^^^^^^
  |
  = help: message: PBC serialization derives only supports explicitly discriminated C-style enums and enums consisting of struct variants
